--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 		</header>
 		<main class="main">
 			<section class="slider">
+				<div class="slider__body">
+					<h1 class="slider__title">Find peace in the Forest</h1>
+					<span class="slider__subtitle">Come and stay in out hut hotel near Mariager Fjord in Denmark
+					</span>
+				</div>
 				<div class="slider__row">
 					<img src="./img/house_1.png" alt="House 1">
 					<img src="./img/house_2.png" alt="House 1">
@@ -53,7 +58,105 @@
 					<span class="slider__next">&#10095</span>
 				</div>
 			</section>
+			<section class="cabins">
+				<div class="cabins__row">
+					<div class="cabins__body cabins__column">
+						<h2 class="cabins__title">The Cabins</h2>
+						<p class="cabins__text">Løvtag's three exclusive and comfortable cabins, Et, Ro and Ly, are
+							designed by architect Sigurd Larsen. They all have an open space with a double bed, a double
+							sofa bed, kitchen, separate toilet and an outdoor shower. On the roof, surrounded by
+							treetops, there is a terrace, which is about nine meters above ground. The cottages are
+							built around tall, old trees that go through the entire cottage from floor to ceiling.</p>
+						<a class="cabins__link" href="#">Read More</a>
+					</div>
+					<div class="cabins__image cabins__column">
+						<img src="./img/cabins.png" alt="Cabins">
+					</div>
+				</div>
+				<div class="cabins__videos">
+					<div class="cabins__video">
+						<img src="./img/video_1.png" alt="">
+					</div>
+					<div class="cabins__video">
+						<img src="./img/video_2.png" alt="">
+					</div>
+					<div class="cabins__video">
+						<img src="./img/video_3.png" alt="">
+					</div>
+				</div>
+			</section>
+			<section class="facilities">
+				<h2 class="facilities__title">Facilities</h2>
+				<div class="facilities__row">
+					<div class="facilities__column">
+						<div class="facilities__item item">
+							<img src="./icons/fridge.svg" alt="">
+							<span class="item__title">Mini fridge</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/kitchen.svg" alt="">
+							<span class="item__title">Kitchenette</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/coffee.svg" alt="">
+							<span class="item__title">Coffee machine</span>
+						</div>
+					</div>
+					<div class="facilities__column">
+						<div class="facilities__item item">
+							<img src="./icons/kettle.svg" alt="">
+							<span class="item__title">Electric tea kettle</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/park.svg" alt="">
+							<span class="item__title">Parking</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/trees.svg" alt="">
+							<span class="item__title">Breathtaking views</span>
+						</div>
+					</div>
+					<div class="facilities__column">
+						<div class="facilities__item item">
+							<img src="./icons/temperature.svg" alt="">
+							<span class="item__title">Floor heating</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/plug.svg" alt="">
+							<span class="item__title">230V</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/wifi.svg" alt="">
+							<span class="item__title">Wi-fi</span>
+						</div>
+					</div>
+					<div class="facilities__column">
+						<div class="facilities__item item">
+							<img src="./icons/shower.svg" alt="">
+							<span class="item__title">Shower</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/toilet.svg" alt="">
+							<span class="item__title">Flushing toilets</span>
+						</div>
+						<div class="facilities__item item">
+							<img src="./icons/towels.svg" alt="">
+							<span class="item__title">Bedding & towels</span>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="about-us">
+				<div class="about-us__images">
+					<img src="./img/cabins_2.png" alt="">
+					<img src="./img/cabins_3.png" alt="">
+				</div>
+				<div class="about-us__link"><a href="#">More about us</a></div>
+			</section>
 		</main>
+		<footer class="footer">
+			<div class="footer__container"></div>
+		</footer>
 	</div>
 	<script src="js/burger.js"></script>
 	<script src="js/slider.js"></script>
