--- a/index.html
+++ b/index.html
@@ -155,7 +155,33 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="footer__container"></div>
+			<div class="footer__container">
+				<div class="footer__row">
+					<div class="footer__column">
+						<h3 class="footer__title">Newsletter</h3>
+						<div class="footer__form form">
+							<input placeholder="Email Address" name="email" type="email" class="form__field">
+							<span class="footer__label">Sign up to our newsletter for special things and
+								receive 10% off your
+								next order.</span>
+						</div>
+						<span class="footer__copyright">© 2021 The Glass Huts</span>
+					</div>
+					<div class="footer__column">
+						<div class="footer__contacts">
+							<a href="#" class="footer__policy">TERMS AND CONDITIONS</a>
+							<a href="#" class="footer__policy">CENCELLATION POLICY</a>
+							<a href="#" class="footer__policy">PRIVACY POLICY</a>
+						</div>
+						<div class="footer__pay">
+							<img src="./icons/paypal-logo.svg" alt="">
+							<img src="./icons/mastercard.svg" alt="">
+							<img src="./icons/visa.svg" alt="">
+							<img src="./icons/bank.svg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 	<script src="js/burger.js"></script>
